--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,5 +52,8 @@
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.patterns": {
     "vite.config.*": "pages.config.*, manifest.config.*, uno.config.*, volar.config.*, *.env, .env.*, alova.config.*"
+  },
+  "files.associations": {
+    "pages.json": "jsonc"
   }
 }
